<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFCC"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/edit_label_name"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_input_name"
            style="@style/EditorFieldStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_name" />

        <TextView
            android:id="@+id/edit_label_brand"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_brand"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_name" />

        <TextView
            android:id="@+id/edit_input_brand"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_brand" />

        <TextView
            android:id="@+id/edit_label_size"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_brand" />

        <TextView
            android:id="@+id/edit_input_size"
            style="@style/EditorFieldStyle"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_size" />

        <TextView
            android:id="@+id/edit_label_color"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_size" />

        <TextView
            android:id="@+id/edit_input_color"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_color" />

        <TextView
            android:id="@+id/edit_label_quantity"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_color" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearlayout_quantity_input"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_quantity">
            <Button
                android:id="@+id/btn_minus_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_quantity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_input_quantity"
            />
            <Button
                android:id="@+id/btn_plus_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_quantity"/>
        </LinearLayout>


        <TextView
            android:id="@+id/edit_label_category"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_quantity_input" />

        <TextView
            android:id="@+id/edit_input_category"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_category" />

        <TextView
            android:id="@+id/edit_label_price"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_category" />

        <TextView
            android:id="@+id/edit_input_price"
            style="@style/EditorFieldStyle"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_price" />

        <TextView
            android:id="@+id/edit_label_supplier_name"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_supplier_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_price" />

        <TextView
            android:id="@+id/edit_input_supplier_name"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_supplier_name" />

        <TextView
            android:id="@+id/edit_label_supplier_phone"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_supplier_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_supplier_name" />

        <TextView
            android:id="@+id/edit_input_supplier_phone"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_supplier_phone" />
        <Button
            android:id="@+id/btnOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button_label"
            android:padding="@dimen/demo_view_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_supplier_phone"

            />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/add_icon_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
