<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFCC"
        android:padding="@dimen/activity_margin">

        <TextView
            android:id="@+id/edit_label_name"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_input_name"
            style="@style/EditorFieldStyle"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_name" />

        <TextView
            android:id="@+id/edit_label_brand"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_brand"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_name" />

        <EditText
            android:id="@+id/edit_input_brand"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_brand" />

        <TextView
            android:id="@+id/edit_label_size"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_brand" />

        <EditText
            android:id="@+id/edit_input_size"
            style="@style/EditorFieldStyle"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_size" />

        <TextView
            android:id="@+id/edit_label_color"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_size" />

        <EditText
            android:id="@+id/edit_input_color"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_color" />

        <TextView
            android:id="@+id/edit_label_quantity"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_color" />

        <EditText
            android:id="@+id/edit_input_quantity"
            style="@style/EditorFieldStyle"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_quantity" />

        <TextView
            android:id="@+id/edit_label_category"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_category"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_quantity" />
        <!-- Gender drop-down spinner -->
        <Spinner
            android:id="@+id/edit_input_category"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/demo_view_padding"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_category" />

        <TextView
            android:id="@+id/edit_label_price"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_category" />

        <EditText
            android:id="@+id/edit_input_price"
            style="@style/EditorFieldStyle"
            android:inputType="numberDecimal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_price" />

        <TextView
            android:id="@+id/edit_label_supplier_name"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_supplier_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_price" />

        <EditText
            android:id="@+id/edit_input_supplier_name"
            style="@style/EditorFieldStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_supplier_name" />

        <TextView
            android:id="@+id/edit_label_supplier_phone"
            style="@style/CategoryStyle"
            android:text="@string/edit_label_supplier_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_supplier_name" />

        <EditText
            android:id="@+id/edit_input_supplier_phone"
            style="@style/EditorFieldStyle"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_supplier_phone" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>
