<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">
    <LinearLayout
        android:id="@+id/layout_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:id="@+id/edit_label_name"
            android:text="@string/edit_label_name"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_brand"
            android:text="@string/edit_label_brand"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_name"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_size"
            android:text="@string/edit_label_size"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_brand"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_color"
            android:text="@string/edit_label_color"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_size"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_quantity"
            android:text="@string/edit_label_quantity"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_color"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_price"
            android:text="@string/edit_label_price"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_quantity"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_supplier_name"
            android:text="@string/edit_label_supplier_name"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_price"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_supplier_phone"
            android:text="@string/edit_label_supplier_phone"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_supplier_name"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_group_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/layout_group_label"
        >
        <EditText
            android:id="@+id/edit_input_name"
            style="@style/EditorFieldStyle"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <EditText
            android:id="@+id/edit_input_brand"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_name"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/edit_input_size"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_brand"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/edit_input_color"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_size"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/edit_input_quantity"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_color"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/edit_label_category"
            android:text="@string/edit_label_category"
            style="@style/CategoryStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_quantity"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/edit_input_category"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_label_category"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/edit_input_price"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_category"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/edit_input_supplier_name"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_price"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/edit_input_supplier_phone"
            style="@style/EditorFieldStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_supplier_name"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </LinearLayout>







</android.support.constraint.ConstraintLayout>

